feat: use t.Helper in background [#96]

--- a/internal/assets/std.simple.v1.go.tmpl
+++ b/internal/assets/std.simple.v1.go.tmpl
@@ -9,7 +9,9 @@ import (
     type backgroundData struct {}
 
     background := func(t *testing.T) backgroundData {
-        {{- range $Background.Steps }}
+        t.Helper()
+
+        {{ range $Background.Steps }}
         // {{ .Keyword }}{{ .Text | trimSpace | withFinalDot }}
 
         {{ end }}
