feat: support a new flag to enable go1.22 features

--- a/internal/assets/std.simple.v1.go.tmpl
+++ b/internal/assets/std.simple.v1.go.tmpl
@@ -53,7 +53,7 @@ import (
 		}
 
         for name, testCase := range testCases {
-            {{- if $Scenario.PluginData.GoParallel }}
+            {{- if and $Scenario.PluginData.GoParallel (not $Scenario.PluginData.Go22Scope) }}
             testCase := testCase
 
             {{ end -}}
